namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-non-associations-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-non-associations-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "non-associations-dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "non-associations-dev"
    cloud-platform.justice.gov.uk/application: "HMPPS Non-associations Apps"
    cloud-platform.justice.gov.uk/owner: "HMPPS Non-Associations: non-associations-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-non-associations.git"
    cloud-platform.justice.gov.uk/team-name: "manage-safety"
